# ai-shader-validation-service

./: .gitignore  .gitmodules  .python-version  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  Makefile  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  env.example  pytest.ini  requirements-dev-simple.txt
.github/workflows/: ci.yml
docker/monitoring/: prometheus.yml
docs/api/: README.md
kubernetes/: deployment.yaml
requirements/: requirements-dev.txt  requirements.txt
scripts/: build_cpp.sh  deploy.sh  setup.sh
src/api/: main.py
src/api/middleware/: auth.py  logging.py  rate_limiting.py  security.py
src/api/models/: errors.py  requests.py  responses.py  visualization_requests.py
src/api/routes/: health.py  validation.py  visualization.py
src/api/websocket/: connection_manager.py  realtime.py
src/bindings/: vvisf_bindings.cpp
src/config/: logging.py  settings.py
src/config/environments/: development.py  production.py  testing.py
src/core/: validator.py  vvisf_engine.py
src/core/analyzers/: __init__.py  isf_analyzer.py  logic_analyzer.py  madmapper_analyzer.py  ml_analyzer.py  portability_analyzer.py  quality_analyzer.py  semantic_analyzer.py  syntax_analyzer.py
src/core/models/: errors.py
src/core/parser/: base_parser.py  glsl_ast.py  glsl_lexer.py  glsl_parser.py
src/core/parsers/: isf_parser.py  madmapper_parser.py
src/core/renderers/: __init__.py  dependency_graphs.py  error_visualizer.py  gl_context.py  performance_charts.py  shader_renderer.py
src/core/utils/: cache_manager.py  gl_utils.py  image_utils.py  performance_monitor.py  validation_utils.py
src/database/: connection.py  init.py  models.py
src/services/: analysis_service.py  queue_service.py  validation_service.py  visualization_service.py
tests/: conftest.py
tests/api/: test_spherical_eye_shader.py  test_validation_api.py
tests/fixtures/shaders/: test_isf_shader.json  test_madmapper_shader.mad
tests/integration/: test_full_integration.py
tests/unit/: test_isf_integration.py  test_madmapper_integration.py  test_shader_rendering.py
